# practica_2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  about-this-activity.md  main.cpp
include/: configuracion.h  enlace.h
src/: ejercicio-5.cpp  ejercicio_10.cpp  ejercicio_11.cpp  ejercicio_12.cpp  ejercicio_13.cpp  ejercicio_2.cpp  ejercicio_3.cpp  ejercicio_4.cpp  ejercicio_5.cpp  ejercicio_6.cpp  ejercicio_7.cpp  ejercicio_8.cpp  ejercicio_9.cpp
